core/sr-api-macros/tests/ui/empty_impl_runtime_apis_call.stderr
error: No api implementation given!
  --> $DIR/empty_impl_runtime_apis_call.rs:18:1
   |
18 | impl_runtime_apis! {}
   | ^^^^^^^^^^^^^^^^^^^^^
